[package]
name = "GEMA_Launcher"
version = "0.1.2"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
rfd = "0.12"
regex = "1.7"
csv = "1.1"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser", "windef"] }

[target.x86_64-pc-windows-gnu]
linker = "zig cc"
rustflags = ["-C", "target-feature=+crt-static"]
